syntax = "proto2";

import "google/protobuf/any.proto";

message PreJoinRequest {
  required string room = 1;
}

message PreJoinResponse {
  required JoinError error = 1;
}

message JoinRequest {
  required string room = 1;
  required string username = 2;
  optional string password = 3;
}

message JoinResponse {
  optional JoinError error = 1;
  repeated User user = 2;
  optional Content content = 3;
}

message User {
  required string uuid = 1;
  required string name = 2;
}

enum JoinError {
  NOT_FOUND = 0;
  FINE = 1;
  REQUIRES_PASSWORD = 2;
  WRONG_PASSWORD = 3;
  UNALLOWED_USERNAME = 4;
  ROOM_FULL = 5;
}

message Content {
  required string uuid = 1;
  required string url = 10;
}

message Vote {
  required string contentId = 1;
}

message Message {
  required string origin = 1;
  required google.protobuf.Any payload = 2;
}
